Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2647

compiler-hs: don't decapitalize field names, do decapitalize argument bindings

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.3
    • Haskell - Compiler
    • None
    • Patch Available

    Description

      By modifying the haskell compiler slightly we can enable the NameConflictTest.

      make check in test/hs succeeds with:

      sh run-test.sh NameConflictTest
      Running test...
      
      ../../lib/hs/src/Thrift/Types.hs:27:10: Warning:
          Orphan instance:
            instance (Hashable k, Hashable v) => Hashable (Map.HashMap k v)
      
      ../../lib/hs/src/Thrift/Types.hs:30:10: Warning:
          Orphan instance: instance Hashable a => Hashable (Set.HashSet a)
      
      ../../lib/hs/src/Thrift/Types.hs:33:10: Warning:
          Orphan instance: instance Hashable a => Hashable (Vector.Vector a)
      
      ../../test/hs/NameConflictTest_Main.hs:5:1: Warning:
          The import of ‘NameConflictTest_Consts’ is redundant
            except perhaps to import instances from ‘NameConflictTest_Consts’
          To import instances alone, use: import NameConflictTest_Consts()
      
      ../../test/hs/NameConflictTest_Main.hs:7:1: Warning:
          The import of ‘Qualified’ is redundant
            except perhaps to import instances from ‘Qualified’
          To import instances alone, use: import Qualified()
      
      ...
      
      Values:
      [JUST,TRUE,FALSE]
      [LEFT,RIGHT]
      Problem_ {f_Problem__problem = Just True, f_Problem__Problem = Just False}
      

      Successful travis run: https://travis-ci.org/cheecheeo/thrift/jobs/31667026

      cc: roger.meier

      Attachments

        Issue Links

          Activity

            People

              roger Roger Meier
              cheecheeo John Chee
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: