THRIFT-2647 compiler-hs: don't decapitalize field names, do decapitalize argument bindings

Client: Haskell
Patch: John Chee